Minor fix for mobile menu + sms z-index

--- a/components/header/styles/Header.module.scss
+++ b/components/header/styles/Header.module.scss
@@ -29,7 +29,9 @@
     padding: 0 !important;
     max-height: 84px;
 }
-
+.logo {
+    z-index: 1;
+}
 .right {
     display: flex;
     align-items: center;
