--- a/components/jumbo/Jumbo.module.scss
+++ b/components/jumbo/Jumbo.module.scss
@@ -1,98 +1,97 @@
 .jumbo {
-	min-height: 100vh;
-	h2 {
-		all: unset;
-		color: darkgray;
-		font-size: 22px;
-		position: relative;
-		top: -2rem;
-		margin-left: 0.1rem;
-	}
-	h2::after {
-		all: unset;
-	}
-	p {
-		margin-top: 0;
-	}
-	margin-bottom: -2rem;
+    min-height: 100vh;
+    h2 {
+        all: unset;
+        color: darkgray;
+        font-size: 22px;
+        position: relative;
+        top: -2rem;
+        margin-left: 0.1rem;
+    }
+    h2::after {
+        all: unset;
+    }
+    p {
+        margin-top: 0;
+    }
+    margin-bottom: -2rem;
 }
 .background {
-	box-shadow: inset 0px 0px 0 2000px rgba(255, 255, 255, 0);
-	height: 100vh;
-	width: 100vw;
-	top: 0;
-	left: 0;
-	margin: 0;
-	position: absolute;
-	img {
-		z-index: -1;
-	}
+    box-shadow: inset 0px 0px 0 2000px rgba(255, 255, 255, 0);
+    height: 100vh;
+    width: 100vw;
+    top: 0;
+    left: 0;
+    margin: 0;
+    position: absolute;
+    img {
+        z-index: -1;
+    }
 }
 .presentation {
-	margin-top: 4rem;
-	position: relative;
-	z-index: 9;
-	max-width: 100%;
-	width: max-content;
+    margin-top: 4rem;
+    position: relative;
+    max-width: 100%;
+    width: max-content;
 
-	h1 {
-		font-size: 58px;
-		text-shadow: 1px 1px 1px darkgray;
-		font-weight: 600;
-	}
-	p {
-		font-size: 22px;
-		line-height: 2.2rem;
-	}
-	svg {
-		position: relative;
-		top: 3px;
-		left: 3px;
-	}
+    h1 {
+        font-size: 58px;
+        text-shadow: 1px 1px 1px darkgray;
+        font-weight: 600;
+    }
+    p {
+        font-size: 22px;
+        line-height: 2.2rem;
+    }
+    svg {
+        position: relative;
+        top: 3px;
+        left: 3px;
+    }
 }
 
 .ctas {
-	white-space: nowrap;
-	button:first-child {
-		font-weight: 600;
-		margin-right: 1rem;
-	}
+    white-space: nowrap;
+    button:first-child {
+        font-weight: 600;
+        margin-right: 1rem;
+    }
 }
 
 .link {
-	text-decoration: unset;
-	color: inherit;
+    text-decoration: unset;
+    color: inherit;
 }
 
 .bg {
-	position: absolute;
-	top: 0;
-	left: 0;
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	height: 100%;
-	width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
+    width: 100%;
 
-	@include useWebp('/pictures/jumbo-bg.jpg');
+    @include useWebp('/pictures/jumbo-bg.jpg');
 }
 
 @include maxWidth($centeringWidthTreshold) {
-	.presentation {
-		text-align: center;
-		margin-left: auto;
-		margin-right: auto;
-	}
-	.bg::after {
-		content: '';
-		position: absolute;
-		width: 100%;
-		height: 100%;
-		background-color: rgba(255, 255, 255, 0.45);
-	}
+    .presentation {
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .bg::after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(255, 255, 255, 0.45);
+    }
 }
 @include xs {
-	.presentation {
-		margin-top: -4rem;
-	}
+    .presentation {
+        margin-top: -4rem;
+    }
 }
