--- a/components/sms/Sms.module.scss
+++ b/components/sms/Sms.module.scss
@@ -1,17 +1,17 @@
 .sms {
-	height: 60px;
-	width: 60px;
-	border-radius: 100% !important;
+    height: 60px;
+    width: 60px;
+    border-radius: 100% !important;
 
-	svg {
-		height: auto;
-		width: 2rem;
-	}
+    svg {
+        height: auto;
+        width: 2rem;
+    }
 }
 
 .wrapper {
-	position: fixed;
-	top: 88%;
-	right: 3%;
-	z-index: 1;
+    position: fixed;
+    top: 88%;
+    right: 3%;
+    z-index: 10;
 }
